# fdb

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
fdb/: Cargo.toml  README.md  all.html  build.rs  constant.FDB_API_VERSION.html  enum.NetworkOption.html  fn.open_database.html  fn.select_api_version.html  fn.set_network_option.html  fn.start_network.html  fn.stop_network.html  index.html  sidebar-items.js  struct.Key.html  struct.KeySelector.html  struct.KeyValue.html  struct.MappedKeyValue.html  struct.Mapper.html  struct.Tenant.html  struct.Value.html
fdb-gen/: Cargo.toml  README.md
fdb-gen/src/: lib.rs
fdb-stacktester/fdb-stacktester-710/: Cargo.toml  README.md
fdb-stacktester/fdb-stacktester-710/bindingtester/: README.md
fdb-stacktester/fdb-stacktester-710/src/: main.rs
fdb-sys/: Cargo.toml  build.rs
fdb-sys/include/630/: fdb_c_options.g.h
fdb-sys/src/: lib.rs
fdb/database/: enum.DatabaseOption.html  index.html  sidebar-items.js  struct.FdbDatabase.html
fdb/database/fdb_database/: struct.FdbDatabase.html
fdb/error/: constant.DATABASE_OPEN.html  constant.SUBSPACE_PACK_WITH_VERSIONSTAMP_PREFIX_INCOMPLETE.html  constant.SUBSPACE_UNPACK_KEY_MISMATCH.html  constant.TUPLE_FROM_BYTES.html  constant.TUPLE_GET.html  constant.TUPLE_KEY_UTIL_STRINC_ERROR.html  constant.TUPLE_PACK_WITH_VERSIONSTAMP_MULTIPLE_FOUND.html  constant.TUPLE_PACK_WITH_VERSIONSTAMP_NOT_FOUND.html  index.html  sidebar-items.js  struct.FdbError.html  type.FdbResult.html
fdb/examples/: get_committed_version.rs  get_mapped_range.rs  get_range.rs  get_versionstamp.rs  hello_world.rs  open_database.rs  watch.rs
fdb/fdb/: fn.select_api_version.html  fn.set_network_option.html  fn.start_network.html  fn.stop_network.html
fdb/future/: index.html  sidebar-items.js  struct.FdbFuture.html  struct.FdbStreamKeyValue.html  struct.FdbStreamMappedKeyValue.html  trait.FdbFutureGet.html  type.FdbFutureCStringArray.html  type.FdbFutureI64.html  type.FdbFutureKey.html  type.FdbFutureKeyArray.html  type.FdbFutureMaybeValue.html  type.FdbFutureUnit.html
fdb/key_value/: struct.Key.html  struct.KeySelector.html  struct.KeyValue.html  struct.Value.html
fdb/mapped_key_value/: struct.MappedKeyValue.html  struct.Mapper.html
fdb/option/: enum.DatabaseOption.html  enum.MutationType.html  enum.NetworkOption.html  enum.StreamingMode.html  enum.TransactionOption.html
fdb/range/: enum.StreamingMode.html  index.html  sidebar-items.js  struct.Range.html  struct.RangeOptions.html
fdb/sismic/: mapped_range_result_state_machine.yaml  range_result_state_machine.yaml
fdb/src/: error.rs  fdb.rs  future.rs  key_value.rs  lib.rs  mapped_key_value.rs  mapped_range.rs  option.rs  range.rs  subspace.rs
fdb/subspace/: index.html  sidebar-items.js  struct.Subspace.html
fdb/tenant/: index.html  sidebar-items.js  struct.FdbTenant.html  struct.TenantManagement.html
fdb/tests/: panic_on_select_api_version_twice.rs  panic_on_select_wrong_api_version.rs  panic_on_start_network_after_network_start_stop.rs  panic_on_stop_network_without_start_network.rs  select_api_version_once.rs  set_network_option.rs  start_stop_network.rs
fdb/transaction/: enum.MutationType.html  enum.TransactionOption.html  index.html  sidebar-items.js  struct.CommittedVersion.html  struct.FdbReadTransaction.html  struct.FdbTransaction.html  struct.TransactionVersionstamp.html  trait.ReadTransaction.html  trait.Transaction.html
fdb/tuple/: index.html  sidebar-items.js  struct.Tuple.html  struct.Versionstamp.html
fdb_gen/: all.html  (+2 more)
(+573 files in other folders)
