[package]
name = "fdb-sys"
version = "0.3.0"
edition = "2018"
authors = ["fdb-rs Developers"]
description = """
Binding to the C APIs for FoundationDB
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/fdb-rs/fdb"
keywords = ["foundationdb", "tokio"]
categories = ["database", "external-ffi-bindings"]

[package.metadata.docs.rs]
features = ["fdb-6_3"]

[features]
default = []
fdb-6_3 = []

[dependencies]

[build-dependencies]
bindgen = "0.59.0"
