[package]
name = "fdb-sys"
version = "0.3.1"
edition = "2018"
rust-version = "1.49"
authors = ["fdb-rs Developers"]
description = """
Binding to the C APIs for FoundationDB
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/fdb-rs/fdb"
keywords = ["foundationdb", "tokio"]
categories = ["database", "external-ffi-bindings"]

[package.metadata.docs.rs]
features = ["fdb-7_1"]

[features]
default = []
fdb-6_3 = []
fdb-7_1 = []

[dependencies]

[build-dependencies]
bindgen = "0.59"
