[package]
name = "fdb-stacktester-710"
version = "0.1.0"
edition = "2018"
authors = ["fdb-rs Developers"]
license = "MIT OR Apache-2.0"

[features]
default = ["fdb/fdb-7_1"]

[dependencies]
bytes = "1"
dashmap = "4"
fdb = { path = "../../fdb", default-features = false }
fdb-sys = { path = "../../fdb-sys", default-features = false }
itertools = "0.10"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "0.8", features = ["v4"] }
